Added Swipeable tabs

--- a/ums/build.gradle
+++ b/ums/build.gradle
@@ -56,4 +56,10 @@ dependencies {
     // Third party libraries
     //Circular imageview
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+
+    //Tabs
+    implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
+
+    //Optional: see how to use the utility.
+    implementation 'com.ogaclejapan.smarttablayout:utils-v4:2.0.0@aar'
 }
